[package]
name = "rust-webwatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = "0.4.42"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
